--- a/CC-2019.html
+++ b/CC-2019.html
@@ -34,6 +34,9 @@
 	 .section{
 		 margin: 0 auto;
 	    }
+	 .section1{
+		 margin-left: 900px;
+	 }
 	</style>
 </head>
 
@@ -160,22 +163,22 @@
 		<div class="main2">
                         <div id="main2">
                             <div id="contents" class="personnel1">
-                    			<div class="section">
-                                <p align="right">密码与编码及其应用前沿论坛组委会<br/></p>
-                                <p align="right">2019年5月25日<br/></p>
+                    			<div class="section1">
+                                <p>密码与编码及其应用前沿论坛组委会<br/></p>
+                                <p>2019年5月25日<br/></p>
 				</div>
                     	  </div>
                             <div id="contents" class="personnel2">
-                                <div class="section">
-					<p align="right">密码与编码及其应用前沿论坛组委会<br/></p>
-					<p align="right">2019年5月25日<br/></p>
+                                <div class="section1">
+					<p >密码与编码及其应用前沿论坛组委会<br/></p>
+					<p >2019年5月25日<br/></p>
 				</div>
                           </div>
                     
                             <div id="contents" class="personnel3">
-                                <div class="section">
-                                          <p align="right">密码与编码及其应用前沿论坛组委会<br/></p>
-                                          <p align="right">2019年5月25日<br/></p>
+                                <div class="section1">
+                                          <p >密码与编码及其应用前沿论坛组委会<br/></p>
+                                          <p >2019年5月25日<br/></p>
 									</div>
                           </div>
 				<div class="footer4 removeborder">
