--- a/QPQC-2017.html
+++ b/QPQC-2017.html
@@ -1,1 +1,183 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--
+    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    -->
+    <script src="js/2.1.1/jquery.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--    <script src="https://unpkg.com/scrollreveal"></script>-->
+    <title>SMCSS</title>
+    <style type="text/css">
+	.navbar-collapse li ul{
+			display:none;
+			height:auto;
+			width: auto;
+			position:absolute;
+			width:100px;
+			z-index:200;
+			margin:0px;
+			list-style-type: none;
+		}
+	.navbar-collapse li:hover ul{
+			display:block;
+		}
+	 .section{
+		 margin: 0 22%;
+	    }
+	</style>
+</head>
 
+<body background="image/会议背景11.jpg">
+<div >
+    <header style="min-height: 76px;">
+        <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="sr-only">切换导航</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!--                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/SHDIpic.PNG"></a>  -->
+                </div>
+                <div id="navbar-collapse" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-center">
+                        <li><a href="index.html">
+                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+                             <li class="submenu">
+                                    <a href="News.html">News</a>
+                                </li>
+                                <li class="submenu">
+				<a href="Conference.html">Conferences</a>
+			</li>
+                        <li class="submenu">
+                            <a href="Training-Camp.html">Training Camp</a>
+                        </li>
+                        <li class="submenu">
+                               <a href="Research.html">Research</a>
+                         </li>
+			 <li class="submenu">
+                               <a href="About us Introduction.html">About us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div><!-- /.container-->
+        </nav>
+    </header>
+    <div id="introdution">
+        <div class="introdution">
+            <div id="theme">
+<!--                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p> -->
+                <p style="text-align: center; margin-top: 10px;" >报告题目：快速全同态公钥加密算法</p>
+                <hr/>
+				<p style="text-indent:2em; line-height:150%;"  >报告摘要：全同态密码是密码学中的长期公开问题，直到2009年才由Gentry给出了一个全同态密码的理论上的构造。针对现有的全同态公钥密码密文扩展大、密文长、密钥长、同态计算密文更新效率低等问题，基于二元截断多项式环给出了一个快速全同态公钥密码的构造。<br/>
+				&nbsp; &nbsp; 报告人简介：王保仓，1979年3月生，河南郸城人，西安电子科技大学通信工程学院/综合业务网理论与关键技术国家重点实验室 密码学专业教授、博士生/硕士生导师，2006年12月获西安电子科技大学密码学专业博士学位。科技部重点研发计划项目课题负责人，主持国家自然科学基金项目3项，主持十三五预研项目、十二五预研项目、陕西省自然基金、华为高校合作重点项目、中电集团30所、54所高校合作项目等。中国密码学会会员。<br/>
+                <p style="text-align: center; margin-top: 10px;" >报告题目：Tightly Secure IBE under Constant-size Master Public Key</p>
+                    <hr/>
+                	<p style="text-indent:2em; line-height:150%;"  >摘要： Chen and Wee [CRYPTO, 2013] proposed the first almost tightly and adaptively secure IBE in the standard model and left two open problems which called for a tightly secure IBE with (1) constant-size master public key and/or (2) constant security loss. In this paper, we propose an IBE scheme with constant-size master public key and tighter security reduction. This (partially) solves Chen and Wee's first open problem and makes progress on the second one. Technically, our IBE scheme is built based on Wee's petit IBE scheme [TCC, 2016] in the composite-order bilinear group whose order is product of four primes. The sizes of master public key, ciphertexts, and secret keys are not only constant but also nearly optimal as Wee's petit IBE. We can prove its adaptive security in the multi-instance, multi-ciphertext setting [PKC, 2015] based on the decisional subgroup assumption and a subgroup variant of DBDH assumption. The security loss is O(log q) where q is the upper bound of the total number of secret keys and challenge ciphertexts revealed to adversary in each single IBE instance. It's much smaller than those for all known adaptively secure IBE schemes in a concrete sense.<br/>
+                	&nbsp; &nbsp;报告人简介： 陈洁， 2008年本科毕业于苏州大学，2013年博士（后）毕业于新加坡南洋理工大学，同年9月加入华东师范大学任副教授，2015年起任研究员、博士生导师，2016年期间兼职任里昂高等师范学院ENS de Lyon研究员。多项研究成果以第一兼/或通讯作者发表在密码学三大会议（CRYPTO、EUROCRYPT、ASIACRYPT）、PKC及Designs, Codes and Cryptography、Theoretical Computer Science等上。近年来，担任ASIACRYPT 2017、Africacrypt 2016、ACNS 2015等著名国际会议程序委员，为IACR会议做了大量审稿工作。<br/>
+			        <p style="text-align: center; margin-top: 10px;" >报告题目：CCA-Secure Keyed-Fully Homomorphic Encryption</p>
+			            <hr/>
+			        	<p style="text-indent:2em; line-height:150%;"  >摘要：To simultaneously achieve CCA security and homomorphic property for encryption, Emura et al. introduced a new cryptographic primitive named keyed-homomorphic encryption, in which homomorphic ciphertext manipulations can only be performed by someone holding a devoted evaluation key which, by itself, does not enable decryption. We show how to construct CCA-secure keyed-fully homomorphic encryption (keyed-FHE) capable of evaluating any functions on encrypted data with an evaluation key.<br/>
+			        	&nbsp; &nbsp;报告人简介：赖俊祚，暨南大学计算机科学系研究员、博士生导师，广东省“珠江人才计划”引进创新团队核心成员。2010 年6月获上海交通大学博士学位。2008年8月至2014年4月在新加坡进行研究工作。研究方向为密码学与信息安全。在EUROCRYPT、ESORICS、PKC、CT-RSA、《IEEE Transactions on Information Forensics and Security》、《IEEE Transactions on Dependable and Secure Computing》、《ACM Transactions on Information and System Security》等密码学和信息安全著名国际会议和国际期刊发表30余篇论文。主持国家自然科学基金面上项目等项目。获得广东省自然科学基金杰出青年基金项目。<br/>
+			            <p style="text-align: center; margin-top: 10px;" >题目：无噪声全同态加密方案的失败尝试</p>
+			                <hr/>
+			            	<p style="text-indent:2em; line-height:150%;"  >摘要：自从2009年Gentry提出全同态加密方案以来，已经出现了很多优秀的改进方案，其中很多改进工作集中在噪声抑制方面。2014年，Nuida和Gentry等人分别提出了基于非交换代数结构的无噪声全同态方案的构造框架。可惜迄今为止，这些无噪声的FHE框架均缺乏可证明安全的实例化。尽管如此，这些失败的尝试也体现了非交性在无噪声FHE构造方面的特殊作用。本报告拟对这些非交换无噪声全同态的构造及其安全性缺陷进行分析和讨论。<br/>
+			            	&nbsp; &nbsp;报告人简介：王励成，北京邮电大学副教授、博导；1995年本科毕业于西北师范大学，2001年硕士毕业于南京大学，2007年博士毕业于上海交通大学。先后在密码方面发表论文50余篇，主持国家自然基金项目2项。目前研究兴趣：抗量子密码；区块链。<br/>
+			                <p style="text-align: center; margin-top: 10px;" >题目：Faster Bootstrapping with Multiple Addends</p>
+			                    <hr/>
+			                	<p style="text-indent:2em; line-height:150%;"  >摘要：As an important cryptographic primitive in cloud computing and outsourced computation, fully homomorphic encryption (FHE) is an animated area of modern cryptography. However, the efficiency of FHE has been a bottleneck that impeding its application. According to Gentry’s blueprint, bootstrapping, which is used to decrease ciphertext errors, is the most important process in FHE. However, bootstrapping is also the most expensive process that affecting the efficiency of the whole system. Firstly, we notice that, hundreds of serial homomorphic additions take most of the time of bootstrapping. We made use of the properties of Boolean circuit to reduce the number of serial homomorphic additions by two third, and thus constructed an efficient FHE scheme with bootstrapping in 12ms. Secondly, the most expensive parts in our bootstrapping, EHCM and serial homomorphic additions, can be accelerated by parallel. This parallel may accelerate the bootstrapping. At last, we found a set of more efficient combination of parameters for our scheme. As a result, our security parameter level is 128 bits and the correctness is elevated, compared with TFHE scheme in ASIACRYPT 2016. Experiments show that the running time of our bootstrapping is 12ms, which is only 23 percent of TFHE, and is less than CGGI17.<br/>
+			                	&nbsp; &nbsp;报告人简介：周潭平，中国人民武装警察部队工程大学在读博士；2012年本科毕业中国人民武装警察部队工程大学，2014年硕士毕业于中国人民武装警察部队工程大学，2015年至今攻读中国人民武装警察部队工程大学的密码学博士学位。先后在密码方面发表论文和专利近10篇，参与申请国家重点研发计划，国家自然科学基金等4个项目。目前研究兴趣：全同态加密的构造与应用。<br/>
+			                    <p style="text-align: center; margin-top: 10px;" >题目：基于不同密钥的密文同态运算</p>
+			                        <hr/>
+			                    	<p style="text-indent:2em; line-height:150%;"  >摘要：传统的同态加密方案都是单密钥的，即参与同态运算的密文都是用同一个密钥加密得到的。但在某些特殊场景中，如分布式计算或匿名计算中，很难要求参与同态运算的密文都用同一个密钥加密。这就提出了一个问题，能否允许基于不同密钥的密文进行运算？或者，能否将其转换为单密钥情形？
+                                    <p style="text-indent:2em; line-height:150%;"  >根据不同的应用场景，我们重点介绍两个方面的内容：</p>
+<p style="text-indent:2em; line-height:150%;"  >1、多密钥全同态加密方案的构造。主要介绍现有的几种代表性思路。</p>
+<p style="text-indent:2em; line-height:150%;"  >2、利用不经意传输等工具对基于不同密钥的密文进行保密运算。主要围绕生物特征保密识别过程，分析基于不同密钥的密文如何进行(计算距离等)运算。<br/>
+			                    	&nbsp; &nbsp;报告人简介：丁勇，男，博士，教授，中国密码会高级会员，中国密码学会安全协议专委会委员，广西信息安全学会副理事长，桂林电子科技大学计算机与信息安全学院院副院长，广西密码学与信息安全重点实验室主任，第七届中国信息安全博士论坛副主席，ISPEC2014，TRUSTCOM2015等国际知名会议程序委员。主要研究方向为信息安全、大数据、物联网等。1975年6月出生，1998年毕业于四川大学数学系。1998年到桂林电子科技大学工作。2000年到2005年在西安电子科技大学硕博连读，并于2005年6月获该校密码学博士学位。主要从事无线网络安全、椭圆曲线密码体系、可证明安全性研究等。先后在西安电子科技大学ISN国家重点实验室攻读博士学位，中兴通讯有限公司技术中心研究信息安全实验室实习，香港城市大学电脑工程与信息技术系做助理研究，NEC中国研究院访问,香港城市大学计算机系Research Fellow。近几年来在国内外核心期刊和国际会议上以发表论文60余篇，其中SCI/EI检索30余篇，出版学术专著1部，工信部规划教材1部。以第一发明人申请中国专利8项（6项已获授权），国际专利2项（已获授权）。主持包括国家自然科学基金、广西区自然科学基金等10余项纵横向基金。
+<br/>
+			        </div>
+			</div>
+        </div>
+<div id="contents" class="personnel1">
+					<div class="section">
+					        <p align="left">顺丰公司代表：<br/></p>
+					        <p align="left">吕聪，男，本科学历，顺丰速运有限公司信息安全工程师，从事应用安全检测、敏感数据防护、加解密系统建设和运维工作。联系方式13510549890。<br/></p>
+							<p align="left">刘玉霞，女，本科学历，顺丰速运有限公司信息安全资深工程师，从事信息安全工作10余年，目前负责信息安全等级保护、敏感数据安全保护和IT系统数据治理工作。联系方式13760391205。<br/></p>
+					    </div>
+					  </div>
+					    <div id="contents" class="personnel2">
+					        		    <div class="section">
+					        		            <p align="left">顺丰公司代表：<br/></p>
+					        		                <p align="left">吕聪，男，本科学历，顺丰速运有限公司信息安全工程师，从事应用安全检测、敏感数据防护、加解密系统建设和运维工作。联系方式13510549890。<br/></p>
+					        		            	<p align="left">刘玉霞，女，本科学历，顺丰速运有限公司信息安全资深工程师，从事信息安全工作10余年，目前负责信息安全等级保护、敏感数据安全保护和IT系统数据治理工作。联系方式13760391205。<br/></p>
+					        		            </div>
+					  </div>
+					
+					    <div id="contents" class="personnel3">
+					        		    <div class="section">
+					                            <p align="left">顺丰公司代表：<br/></p>
+					                                <p align="left">吕聪，男，本科学历，顺丰速运有限公司信息安全工程师，从事应用安全检测、敏感数据防护、加解密系统建设和运维工作。联系方式13510549890。<br/></p>
+					                            	<p align="left">刘玉霞，女，本科学历，顺丰速运有限公司信息安全资深工程师，从事信息安全工作10余年，目前负责信息安全等级保护、敏感数据安全保护和IT系统数据治理工作。联系方式13760391205。<br/></p>
+					                            </div>
+					  </div>
+<div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		              </div> 
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    let up1=document.getElementById('up1'),
+        down2=document.getElementById('down2');
+    //跨浏览器兼容事件处理器
+    var addHandler=function(element,type,handler){
+        if(addEventListener){
+            element.addEventListener(type,handler,false);
+        }
+        else if(attachEvent){
+            element.attachEvent('on'+type,handler);
+        }
+        else{
+            element['on'+type]=handler;
+        }
+    }
+    //向下图标的鼠标事件及点击事件监听器
+    addHandler(up1,"mouseover",()=>up1.style.border="2px solid wheat");
+
+    addHandler(up1,"click",()=>up1.style.border="2px dotted wheat");
+
+    addHandler(up1,"mouseout",()=>up1.style.border="");
+
+    addHandler(down2,"mouseover",()=>down2.style.border="2px solid wheat");
+
+    addHandler(down2,"click",()=>down2.style.border="2px dotted wheat");
+
+    addHandler(down2,"mouseout",()=>down2.style.border="");
+    window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
+</script>
+<script type="text/javascript">
+         function googleTranslateElementInit() {
+         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
+</body>
+</html>
