--- a/CC-2019.html
+++ b/CC-2019.html
@@ -88,7 +88,7 @@
                         </div> 
         </div>
         <div class="introdution">
-            <div id="main">
+            <div id="main2">
                 <div id="contents" class="personnel1">
                                     <p align="center" class="organization">组委会成员(排名不分先后顺序)<br/></p>
                                     <p align="center">冯克勤&nbsp&nbsp冯荣权&nbsp&nbsp陈克非<br/></p>
