--- a/CC-2019.html
+++ b/CC-2019.html
@@ -157,14 +157,13 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <div id="stay-info">
-                                        </div>
+                                      
                                      </div>
 		
 				<div class="footer4 removeborder">
-			 <p style="text-align:center;margin-top: -5px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
-			
-		</div> 
+				 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+				
+			</div> 
                         </div>
                     </div>
                 </div>
