--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -414,7 +414,7 @@
                                                                     ">灵峰山庄</a>。
                                                                 </p>-->
                                                             </div>
-                                                            <div id="participation-method" name="method"> 
+                                                            <div id="participation-method" name="method" style="margin-top: -7%;"> 
                                                             
                                                                     论坛赞助与合作联系
                                                                     <p>
@@ -424,7 +424,7 @@
                                                                     </p>
                                                             </div>
 				<div class="footer4 removeborder">
-			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		              </div> 
                         </div>
