--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -138,7 +138,7 @@
 			<div class="section">
 			<p align="left">会议组委会<br/></p>
 			</div>
-                    <table class="tableizer-table"> 
+                    <table class="tableizer-table" > 
                         <tbody>
                         <tr ><td style="width: 335px;">来学嘉（上海交通大学）</td><td style="width:335px;">陈克非（杭州师范大学）</td></tr>
 						<tr><td style="width: 335px;">吴文玲（中科院软件所）</td><td style="width: 335px;">冯荣权（北京大学）</td></tr>
@@ -201,7 +201,7 @@
 									</div>
                           </div>
 				<div class="footer4 removeborder" style="margin-top: -80px;">
-			 <p style="text-align:center" ><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center" ><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		              </div> 
                         </div>
